--- a/front-page.html
+++ b/front-page.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="noindex">
-        <title> JNL モリンガパウダーレシピサイト</title>
+        <title> 【JNL】 モリンガパウダーレシピサイト</title>
         <meta name="description" content="美味しい、ヘルシーモリンガパウダーのレシピをご紹介します">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
