--- a/front-page.html
+++ b/front-page.html
@@ -16,7 +16,7 @@
         <heeder class="l-header">
             <div class="l-header-inner">
                 <h1 class="p-header-logo">
-                    <figure class="p-header-logo"><img src="img/" alt="main logo"></figure>
+                    <figure class="p-header-logo__img js-img-bg object-fit"><img src="img/Nikki.jpg" alt="main logo"></figure>
                 </h1>
 
                 <nav class="p-header-nav">
@@ -138,7 +138,6 @@
             </div>
             <!-- /.p-news-inner -->
         </section>
-        
         <section class="p-menu">
             <div class="p-menu-inner">
                 <div class="p-menu-ttl c-sec-ttl">
@@ -448,4 +447,12 @@
 
         </footer>
 
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ja.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="js/script.js"></script>
+
     </body>
+</html>
