--- a/front-page.html
+++ b/front-page.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <heeder class="l-header">
+        <heeder class="l-header u-zindex__1000">
             <div class="l-header-inner">
                 <h1 class="p-header-logo">
                     <figure class="p-header-logo__img js-img-bg object-fit"><img src="img/Nikki.jpg" alt="main logo"></figure>
@@ -48,7 +48,7 @@
             <!-- /.l-header-inner -->
         </heeder>
 
-        <section class="p-fv"  style="background-image: url(img/);">
+        <section class="p-fv"  style="background-image: url(img/Nikki.jpg);">
             <div class="p-fv-inner">
                 <h2 class="p-fv-copy">
                     <p>Moringa<br>Recipe</p>
