--- a/front-page.html
+++ b/front-page.html
@@ -152,16 +152,16 @@
                     <p>レシピ</p>
                 </div>
 
-            <div id="topics">
-                <ul class="p-recipe-tabs">
-                    <li class="p-recipe-tab is-select"><p>ご飯・麺</p></li>
-                    <li class="p-recipe-tab"><p>メイン</p></li>
-                    <li class="p-recipe-tab"><p>サイド</p></li>
-                    <li class="p-recipe-tab"><p><span>ドリンク•</span><span>スープ</span></p></li>
-                    <li class="p-recipe-tab"><p>スイーツ</p></li>
+            <div class="tab_box">
+                <ul class="p-recipe-tabs btn_area">
+                    <li class="p-recipe-tab is-tab-select tab_btn active"><p>ご飯・麺</p></li>
+                    <li class="p-recipe-tab tab_btn"><p>メイン</p></li>
+                    <li class="p-recipe-tab tab_btn"><p>サイド</p></li>
+                    <li class="p-recipe-tab tab_btn"><p><span>ドリンク•</span><span>スープ</span></p></li>
+                    <li class="p-recipe-tab tab_btn"><p>スイーツ</p></li>
                 </ul>
-                <div class="p-recipe-cont">
-                    <ul class="p-recipe-cont__list">
+                <div class="p-recipe-cont panel_area">
+                    <ul class="p-recipe-cont__list is-tab-active tab_panel active">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -177,23 +177,8 @@
                                 <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
                             </div>
                         </li>
-                        <li class="p-recipe-cont__item">
-                            <div class="p-recipe-img">
-                                <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                    <img src="img/moringa-powder.png" alt="menu img">
-                                    <span class="p-recipe-new"><p>NEW</p></span>
-                                    <span class="p-recipe-tag">カテゴリー</span>
-                                    <span class="p-recipe-coming">coming soon</span>
-                                </figure>
-                            </div>
-                            <!-- /.p-recipe-img -->
-                            <div class="p-recipe-txt">
-                                <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                            </div>
-                        </li>
                     </ul>
-                    <ul class="p-recipe-cont__list is-hide">
+                    <ul class="p-recipe-cont__list tab_panel">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -209,23 +194,8 @@
                                 <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
                             </div>
                         </li>
-                        <li class="p-recipe-cont__item">
-                            <div class="p-recipe-img">
-                                <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                    <img src="img/moringa-powder.png" alt="menu img">
-                                    <span class="p-recipe-new"><p>NEW</p></span>
-                                    <span class="p-recipe-tag">カテゴリー</span>
-                                    <span class="p-recipe-coming">coming soon</span>
-                                </figure>
-                            </div>
-                            <!-- /.p-recipe-img -->
-                            <div class="p-recipe-txt">
-                                <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                            </div>
-                        </li>
                     </ul>
-                    <ul class="p-recipe-cont__list is-hide">
+                    <ul class="p-recipe-cont__list tab_panel">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -241,23 +211,8 @@
                                 <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
                             </div>
                         </li>
-                        <li class="p-recipe-cont__item">
-                            <div class="p-recipe-img">
-                                <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                    <img src="img/moringa-powder.png" alt="menu img">
-                                    <span class="p-recipe-new"><p>NEW</p></span>
-                                    <span class="p-recipe-tag">カテゴリー</span>
-                                    <span class="p-recipe-coming">coming soon</span>
-                                </figure>
-                            </div>
-                            <!-- /.p-recipe-img -->
-                            <div class="p-recipe-txt">
-                                <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                            </div>
-                        </li>
                     </ul>
-                    <ul class="p-recipe-cont__list is-hide">
+                    <ul class="p-recipe-cont__list tab_panel">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -273,23 +228,8 @@
                                 <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
                             </div>
                         </li>
-                        <li class="p-recipe-cont__item">
-                            <div class="p-recipe-img">
-                                <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                    <img src="img/moringa-powder.png" alt="menu img">
-                                    <span class="p-recipe-new"><p>NEW</p></span>
-                                    <span class="p-recipe-tag">カテゴリー</span>
-                                    <span class="p-recipe-coming">coming soon</span>
-                                </figure>
-                            </div>
-                            <!-- /.p-recipe-img -->
-                            <div class="p-recipe-txt">
-                                <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                            </div>
-                        </li>
                     </ul>
-                    <ul class="p-recipe-cont__list is-hide">
+                    <ul class="p-recipe-cont__list tab_panel">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -305,28 +245,10 @@
                                 <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
                             </div>
                         </li>
-                        <li class="p-recipe-cont__item">
-                            <div class="p-recipe-img">
-                                <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                    <img src="img/moringa-powder.png" alt="menu img">
-                                    <span class="p-recipe-new"><p>NEW</p></span>
-                                    <span class="p-recipe-tag">カテゴリー</span>
-                                    <span class="p-recipe-coming">coming soon</span>
-                                </figure>
-                            </div>
-                            <!-- /.p-recipe-img -->
-                            <div class="p-recipe-txt">
-                                <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                            </div>
-                        </li>
                     </ul>
                 </div>
                 <!-- /.p-recipe-cont -->
             </div>
-                
-
-                
             </div>
             <!-- /.p-recipe-inner -->
         </section>
