--- a/front-page.html
+++ b/front-page.html
@@ -154,7 +154,7 @@
 
                 <div class="p-recipe-wrap">
                     <ul class="p-recipe-tabs">
-                        <li class="p-recipe-tab is-tab-select active"><p>ご飯・麺</p></li>
+                        <li class="p-recipe-tab is-tab-select"><p>ご飯・麺</p></li>
                         <li class="p-recipe-tab"><p>メイン</p></li>
                         <li class="p-recipe-tab"><p>サイド</p></li>
                         <li class="p-recipe-tab"><p><span>ドリンク•</span><span>スープ</span></p></li>
