--- a/front-page.html
+++ b/front-page.html
@@ -161,7 +161,7 @@
                         <li class="p-recipe-tab"><p>スイーツ</p></li>
                     </ul>
                     <div class="p-recipe-cont">
-                        <ul class="p-recipe-cont__list is-tab-active tab_panel active">
+                        <ul class="p-recipe-cont__list is-tab-active">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -178,7 +178,7 @@
                             </div>
                         </li>
                         </ul>
-                        <ul class="p-recipe-cont__list tab_panel">
+                        <ul class="p-recipe-cont__list">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -195,7 +195,7 @@
                             </div>
                         </li>
                         </ul>
-                        <ul class="p-recipe-cont__list tab_panel">
+                        <ul class="p-recipe-cont__list">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -212,7 +212,7 @@
                             </div>
                         </li>
                         </ul>
-                        <ul class="p-recipe-cont__list tab_panel">
+                        <ul class="p-recipe-cont__list">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
@@ -229,7 +229,7 @@
                             </div>
                         </li>
                         </ul>
-                        <ul class="p-recipe-cont__list tab_panel">
+                        <ul class="p-recipe-cont__list">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
