--- a/front-page.html
+++ b/front-page.html
@@ -161,7 +161,7 @@
                         <li class="p-recipe-tab"><p>スイーツ</p></li>
                     </ul>
                     <div class="p-recipe-cont">
-                        <ul class="p-recipe-cont__list is-tab-active">
+                        <ul class="p-recipe-cont__list">
                         <li class="p-recipe-cont__item">
                             <div class="p-recipe-img">
                                 <figure class="p-recipe-img__inner js-img-bg object-fit">
