--- a/front-page.html
+++ b/front-page.html
@@ -51,7 +51,7 @@
             <!-- /.l-header-inner -->
         </heeder>
         <main class="l-main">
-            <section class="p-fv"  style="background-image: url(img/moringa-powder.png);">
+            <section class="p-fv"  style="background-image: url(img/moringa.jpg);">
                 <div class="p-fv-inner">
                     <h2 class="p-fv-copy">
                         <p>Moringa</p>
@@ -76,7 +76,7 @@
                         </div>
                         <!-- /.p-news-top__txt -->
                         <div class="p-news-top__img">
-                            <figure class="p-news-top__img-inner"><img src="img/moringa-powder.png" alt="Moringa powder"></figure>
+                            <figure class="p-news-top__img-inner object-fit"><img src="img/moringa-powder.png" alt="Moringa powder"></figure>
                         </div>
                     </div>
                     <!-- /.p-news-top -->
@@ -165,89 +165,164 @@
                         </ul>
                         <div class="p-recipe-cont">
                             <ul class="p-recipe-cont__list">
-                            <li class="p-recipe-cont__item">
-                                <div class="p-recipe-img">
-                                    <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                        <img src="img/moringa-powder.png" alt="menu img">
-                                        <span class="p-recipe-new"><p>NEW</p></span>
-                                        <span class="p-recipe-tag">ご飯・麺</span>
-                                        <span class="p-recipe-coming">coming soon</span>
-                                    </figure>
-                                </div>
-                                <!-- /.p-recipe-img -->
-                                <div class="p-recipe-txt">
-                                    <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                    <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                                </div>
-                            </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">ご飯・麺</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">ご飯・麺</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">ご飯・麺</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">ご飯・麺</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
                             </ul>
                             <ul class="p-recipe-cont__list">
-                            <li class="p-recipe-cont__item">
-                                <div class="p-recipe-img">
-                                    <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                        <img src="img/moringa-powder.png" alt="menu img">
-                                        <span class="p-recipe-new"><p>NEW</p></span>
-                                        <span class="p-recipe-tag">メイン</span>
-                                        <span class="p-recipe-coming">coming soon</span>
-                                    </figure>
-                                </div>
-                                <!-- /.p-recipe-img -->
-                                <div class="p-recipe-txt">
-                                    <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                    <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                                </div>
-                            </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">メイン</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">メイン</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">メイン</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
                             </ul>
                             <ul class="p-recipe-cont__list">
-                            <li class="p-recipe-cont__item">
-                                <div class="p-recipe-img">
-                                    <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                        <img src="img/moringa-powder.png" alt="menu img">
-                                        <span class="p-recipe-new"><p>NEW</p></span>
-                                        <span class="p-recipe-tag">サイド</span>
-                                        <span class="p-recipe-coming">coming soon</span>
-                                    </figure>
-                                </div>
-                                <!-- /.p-recipe-img -->
-                                <div class="p-recipe-txt">
-                                    <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                    <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                                </div>
-                            </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">サイド</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
                             </ul>
                             <ul class="p-recipe-cont__list">
-                            <li class="p-recipe-cont__item">
-                                <div class="p-recipe-img">
-                                    <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                        <img src="img/moringa-powder.png" alt="menu img">
-                                        <span class="p-recipe-new"><p>NEW</p></span>
-                                        <span class="p-recipe-tag">DRINK・SOUP</span>
-                                        <span class="p-recipe-coming">coming soon</span>
-                                    </figure>
-                                </div>
-                                <!-- /.p-recipe-img -->
-                                <div class="p-recipe-txt">
-                                    <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                    <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                                </div>
-                            </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">DRINK・SOUP</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
                             </ul>
                             <ul class="p-recipe-cont__list">
-                            <li class="p-recipe-cont__item">
-                                <div class="p-recipe-img">
-                                    <figure class="p-recipe-img__inner js-img-bg object-fit">
-                                        <img src="img/moringa-powder.png" alt="menu img">
-                                        <span class="p-recipe-new"><p>NEW</p></span>
-                                        <span class="p-recipe-tag">SWEETS</span>
-                                        <span class="p-recipe-coming">coming soon</span>
-                                    </figure>
-                                </div>
-                                <!-- /.p-recipe-img -->
-                                <div class="p-recipe-txt">
-                                    <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
-                                    <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
-                                </div>
-                            </li>
+                                <li class="p-recipe-cont__item">
+                                    <div class="p-recipe-img">
+                                        <figure class="p-recipe-img__inner js-img-bg object-fit">
+                                            <img src="img/moringa-powder.png" alt="menu img">
+                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-tag">SWEETS</span>
+                                            <span class="p-recipe-coming">coming soon</span>
+                                        </figure>
+                                    </div>
+                                    <!-- /.p-recipe-img -->
+                                    <div class="p-recipe-txt">
+                                        <p class="p-recipe-txt__exc">朝食の定番！お好きなフルーツや野菜とモリンガで</p>
+                                        <h3 class="p-recipe-txt__ttl">モリンガフルーツスムージー</h3>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                         <!-- /.p-recipe-cont -->
@@ -347,11 +422,12 @@
                                 <li class="p-footer-bottom__item"><a href="">アクセシビリティへの対応方針</a></li>
                             </ul>
                         </nav>
-                        <div class="l-footer-copy"><small>Copyright JNL Co., Ltd. All Right Reserved.</small></div>
+                        
                     </div>
                     <!-- /.p-footer-bottom__inner -->
                 </div>
                 <!-- /.p-footer-bottom -->
+                <div class="l-footer-copy"><small>Copyright JNL Co., Ltd. All Right Reserved.</small></div>
             </div>
             <!-- /.l-footer-inner -->
 
@@ -359,11 +435,8 @@
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-        <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ja.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/js/swiper.min.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script> -->
         <script src="js/script.js"></script>
 
     </body>
